--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "defstudio/telegraph": "^1.57",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
